--- a/app3K/index.html
+++ b/app3K/index.html
@@ -52,8 +52,8 @@
 
 
 
-
-<!-- =================================================== view header -->
+<!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
+<!-- =================================================== [view header] -->
 
 <header class="elHeader cHeader">
 
@@ -290,13 +290,8 @@
 </section>
 
 
-
-
-
-
-
-
-<!-- =================================================== mobile header -->
+<!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
+<!-- =================================================== [mobile header] -->
 
 <nav class="elHeader elHeaderMobile cHeader">
 
@@ -334,8 +329,8 @@
 
 
 
-
-<!-- =================================================== aside panel -->
+<!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
+<!-- =================================================== [aside panel] -->
 
 <aside class="elAside cMenu cMenuAside">
 
