--- a/app3K/index.html
+++ b/app3K/index.html
@@ -19,7 +19,7 @@
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [HEAD] -->
 
-<!-- frontent settings 12з.3xxx -->
+<!-- frontent settings 12з.3xxx app3K -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -36,7 +36,7 @@
 
 <!-- bulma --><link href="app/lib/bulma.css" rel="stylesheet"  media="all" /><!-- / -->
 <!-- tufte --><link href="app/lib/tufteDesign.css" rel="stylesheet"  media="all" /><!-- / -->
-<!-- app design --><link href="app/css/app.css" rel="stylesheet"  media="all" /><!-- / -->
+<!-- app layout --><link href="app/css/app.css" rel="stylesheet"  media="all" /><!-- / -->
 
 <!-- ## custom settings below-->
 
@@ -61,7 +61,7 @@
     <div class="elItem elLogo cLogo">
         <a href="#asdasdasdasd" class="cHomeLink">
             <h2 class="aDisplayAlias">Alt Title</h2>
-            <img src="app/img/sheep.today.svg" />
+            <img src="app/img/zl.svg" />
         </a>
     </div>
     <!-- endblock -->
@@ -299,7 +299,7 @@
     <div class="elItem elLogo cLogo">
         <a href="#" class="cHomeLink">
             <h2 class="aDisplayAlias">Alt Title</h2>
-            <img src="app/img/sheep.today.svg" />
+            <img src="app/img/zl.svg" />
         </a>
     </div>
     <!-- endblock -->
