--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -293,6 +293,9 @@
     <a href="https://app.asana.com/" class="center"><i>Asana</i></a>
 
     <div class="a0"></div>
+    <a href="https://developers.facebook.com/tools/debug/"><i>FB debugger</i></a>
+    <a href="https://analytics.google.com/analytics/web/"><i>G Analytics</i></a>
+    <div class="a0"></div>
 
     <a href="https://www.typeform.com/"><i>typeform</i></a>
     <a href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
