--- a/app3K/index.html
+++ b/app3K/index.html
@@ -1,7 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+<!-- frontent settings 12з.3xxx app3K -->
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="x-ua-compatible" content="ie=edge" />
+
+<!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
+<!-- =================================================== [HEAD CONTENT] -->
+
 <title>appName</title>
 <meta name="description" content="" />
 <meta name="author" content="zl-12з" />
@@ -17,12 +24,7 @@
 <meta property="og:locale"       content="en_US" />
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-<!-- =================================================== [HEAD] -->
-
-<!-- frontent settings 12з.3xxx app3K -->
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="x-ua-compatible" content="ie=edge" />
+<!-- =================================================== [HEAD ENGINE] -->
 
 <!-- ## critical CSS -->
 
