--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -1,170 +1,173 @@
 <!doctype html>
 <html>
 <head>
-    <title name="Home 2016">♥☺☯✈✉</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style type="text/css">
-        html, body { margin:0; padding:0; height:100%; overflow:hidden; }
+<!-- frontent settings 0з webhome -->
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="x-ua-compatible" content="ie=edge" />
+<title name="Home 2016">♥☺☯✈✉</title>
+<style type="text/css">
+    html, body { margin:0; padding:0; height:100%; overflow:hidden; }
 
-        @media screen and (max-width: 1400px) {
-            body { font-size:15px; font-family:'Bookman Old Style', Georgia, serif; }
-        }
-        @media screen and (max-width: 1100px) {
-            body { font-size:13px; font-family:'Bookman Old Style', Georgia, serif; }
-        }
-        @media screen and (max-width: 800px) {
-            body { font-size:10px; font-family:'Lucida Sans Unicode', tahoma, sans-serif; }
-        }
+    @media screen and (max-width: 1400px) {
+        body { font-size:15px; font-family:'Bookman Old Style', Georgia, serif; }
+    }
+    @media screen and (max-width: 1100px) {
+        body { font-size:13px; font-family:'Bookman Old Style', Georgia, serif; }
+    }
+    @media screen and (max-width: 800px) {
+        body { font-size:10px; font-family:'Lucida Sans Unicode', tahoma, sans-serif; }
+    }
 
-        div.collumn {
-            display:block;
-            position:absolute;
-            top:0;
-            height:100%;
-        }
+    div.collumn {
+        display:block;
+        position:absolute;
+        top:0;
+        height:100%;
+    }
 
-        div.collumn1 { width:17%; left:0; }
-        div.collumn2 { width:17%; left:17%; }
-        div.collumn3 { width:17%; left:34%; }
-        div.collumn4 { width:17%; left:51%; }
-        div.collumn5 { width:17%; left:68%; }
-        div.collumn6 { width:15%; left:85%; }
+    div.collumn1 { width:17%; left:0; }
+    div.collumn2 { width:17%; left:17%; }
+    div.collumn3 { width:17%; left:34%; }
+    div.collumn4 { width:17%; left:51%; }
+    div.collumn5 { width:17%; left:68%; }
+    div.collumn6 { width:15%; left:85%; }
 
-        a, div.a2, div.a23, div.a3, div.a0 {
-            display:block;
-            position:relative;
-            width:100%;
-            height:5%;
-            overflow:hidden;
+    a, div.a2, div.a23, div.a3, div.a0 {
+        display:block;
+        position:relative;
+        width:100%;
+        height:5%;
+        overflow:hidden;
 
-            -moz-transition: 0.2s background linear;
-            -webkit-transition: 0.2s background linear;
-            transition: 0.2s background linear;
-        }
+        -moz-transition: 0.2s background linear;
+        -webkit-transition: 0.2s background linear;
+        transition: 0.2s background linear;
+    }
 
-        a {
-            text-decoration:none;
-            line-height:1em;
-            white-space:nowrap;
-            color:#25E;
-        }
-        a i {
-            display:block;
-            position:relative;
-            top:50%;
-            margin-top:-.6em;
-            padding:0 2px 0 8px;
-            font-style:normal;
-        }
+    a {
+        text-decoration:none;
+        line-height:1em;
+        white-space:nowrap;
+        color:#25E;
+    }
+    a i {
+        display:block;
+        position:relative;
+        top:50%;
+        margin-top:-.6em;
+        padding:0 2px 0 8px;
+        font-style:normal;
+    }
 
-        a:hover {
-            background:#BDB;
-            color:#046;
-        }
-        a:hover i {
-            padding-top:1px;
-            padding-left:10px;
-        }
+    a:hover {
+        background:#BDB;
+        color:#046;
+    }
+    a:hover i {
+        padding-top:1px;
+        padding-left:10px;
+    }
 
-        a.bold 					{ font-weight:bold; }
-        a.red 					{ color:#900; }
-        a.gray 					{ color:#999; }
-        a.gray:hover			{ color:#557; }
-        a.center				{ text-align:center; }
-        a.center i				{ padding-left:2px; }
-        a.center:hover i		{ padding-left:4px; }
-        a.right					{ text-align:right; }
-        a.right i				{ padding-left:2px; padding-right:8px; }
-        a.right:hover i			{ padding-left:4px; }
-        a.light					{ background-color:#EEE; }
-        a.marker				{ background-color:#BDB; color:#009; }
-        a.marker:hover			{ background-color:#DEB; }	
+    a.bold 					{ font-weight:bold; }
+    a.red 					{ color:#900; }
+    a.gray 					{ color:#999; }
+    a.gray:hover			{ color:#557; }
+    a.center				{ text-align:center; }
+    a.center i				{ padding-left:2px; }
+    a.center:hover i		{ padding-left:4px; }
+    a.right					{ text-align:right; }
+    a.right i				{ padding-left:2px; padding-right:8px; }
+    a.right:hover i			{ padding-left:4px; }
+    a.light					{ background-color:#EEE; }
+    a.marker				{ background-color:#BDB; color:#009; }
+    a.marker:hover			{ background-color:#DEB; }	
 
-        div.center a			{ text-align:center; }
-        div.center a i			{ padding-left:2px; }
-        div.center a:hover i	{ padding-left:4px; }
-        div.gray a 				{ color:#CCC; }
+    div.center a			{ text-align:center; }
+    div.center a i			{ padding-left:2px; }
+    div.center a:hover i	{ padding-left:4px; }
+    div.gray a 				{ color:#CCC; }
 
-        div.a2 a {
-            width:50%;
-            height:100%;
-            left:0%;
-            top:0;
-            border-right:1px #BDB solid;
-        }
-        div.a2 a+a {
-            left:50%;
-            width:51%;
-            top:-100%;
-            border:0;
-        }
-        div.a23 a {
-            width:60%;
-            height:100%;
-            left:0%;
-            top:0;
-            border-right:1px #BDB solid;
-        }
-        div.a23 a+a {
-            left:60%;
-            width:41%;
-            top:-100%;
-            border:0;
-        }
-        div.a3 a {
-            width:34%;
-            height:100%;
-            top:-200%;
-            left:68%;
-        }
-        div.a3 a:first-child {
-            left:0;
-            top:0;
-            border-right:1px #BDB solid;
-        }
-        div.a3 a:first-child+a {
-            left:34%;
-            top:-100%;
-            border-right:1px #BDB solid;
-        }
+    div.a2 a {
+        width:50%;
+        height:100%;
+        left:0%;
+        top:0;
+        border-right:1px #BDB solid;
+    }
+    div.a2 a+a {
+        left:50%;
+        width:51%;
+        top:-100%;
+        border:0;
+    }
+    div.a23 a {
+        width:60%;
+        height:100%;
+        left:0%;
+        top:0;
+        border-right:1px #BDB solid;
+    }
+    div.a23 a+a {
+        left:60%;
+        width:41%;
+        top:-100%;
+        border:0;
+    }
+    div.a3 a {
+        width:34%;
+        height:100%;
+        top:-200%;
+        left:68%;
+    }
+    div.a3 a:first-child {
+        left:0;
+        top:0;
+        border-right:1px #BDB solid;
+    }
+    div.a3 a:first-child+a {
+        left:34%;
+        top:-100%;
+        border-right:1px #BDB solid;
+    }
 
-        div.a0 i {
-            display:block;
-            text-align:center;
-            position:relative;
-            width:100%;
-            top:50%;
-            font-size:1.4em;
-            margin-top:-.6em;
-            font-style:normal;
-            color:#EB7;
-        }
+    div.a0 i {
+        display:block;
+        text-align:center;
+        position:relative;
+        width:100%;
+        top:50%;
+        font-size:1.4em;
+        margin-top:-.6em;
+        font-style:normal;
+        color:#EB7;
+    }
 
-        div#setrows {
-            position:absolute;
-            width:100%;
-            height:100%;
-        }
-        div#setrows div.row {
-            position:relative;
-            width:100%;
-            height:5%;
-            border-bottom:#BDB 1px solid;
-            margin-bottom:-1px;
-        }
+    div#setrows {
+        position:absolute;
+        width:100%;
+        height:100%;
+    }
+    div#setrows div.row {
+        position:relative;
+        width:100%;
+        height:5%;
+        border-bottom:#BDB 1px solid;
+        margin-bottom:-1px;
+    }
 
-        div#setcolls div.collumn {
-            border-right:#BDB 1px solid;
-        }
+    div#setcolls div.collumn {
+        border-right:#BDB 1px solid;
+    }
 
-        img#yetilogo {
-            display:block;
-            position:absolute;
-            width:100%;
-            height:100%;
-        }
+    img#yetilogo {
+        display:block;
+        position:absolute;
+        width:100%;
+        height:100%;
+    }
 
-    </style>
+</style>
 </head>
 <body>
 
@@ -294,9 +297,13 @@
 
     <div class="a0"></div>
     <a href="https://developers.facebook.com/tools/debug/"><i>FB debugger</i></a>
-    <a href="https://analytics.google.com/analytics/web/"><i>G Analytics</i></a>
-    <div class="a0"></div>
+    <a href="https://developers.google.com/speed/pagespeed/insights/"><i>PageSpeed</i></a>
+    <a href="https://www.webpagetest.org/"><i>WebPageTest</i></a>
 
+    <div class="a0"></div>
+    <a href="https://analytics.google.com/analytics/web/"><i>G Analytics</i></a>
+
+    <div class="a0"></div>
     <a href="https://www.typeform.com/"><i>typeform</i></a>
     <a href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
 
@@ -346,6 +353,10 @@
     </div>
     <div class="a0"></div>
 
+    <a href="https://gethead.info/"><i>◄Head►</i></a>
+
+    <div class="a0"></div>
+
     <a href="http://www.layoutit.com/build"><i>Boo Builder</i></a>
     <a href="http://hackerthemes.com/bootstrap-cheatsheet/"><i>Bootstrap Cheat</i></a>
 
@@ -379,8 +390,10 @@
     </div>
     <a href="http://caniuse.com/" class="bold"><i>caniuse</i></a>
 
-    <a href="http://apps.pixlr.com/editor/"><i>Photoshop</i></a>
-    <a href="https://www.photopea.com/"><i>Photopea</i></a>
+    <div class="a2">
+        <a href="http://apps.pixlr.com/editor/"><i>Pixlr</i></a>
+        <a href="https://www.photopea.com/"><i>Photopea</i></a>
+    </div>
     
     <div class="a3 center">
     <a href="https://cloudconvert.com/website-to-pdf"><i>url·pdf</i></a>
@@ -393,7 +406,7 @@
     <div class="a0"><i>€ · ♥★←→ &nbsp;</i></div>
 
     <div class="a23">
-        <a href="https://www.google.com/fonts"><i>GFonts</i></a>
+        <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
         <a href="https://google-webfonts-helper.herokuapp.com/fonts/" class="center"><i>▼</i></a>
     </div>
     <div class="a2">
