--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -198,7 +198,7 @@
     </div>
 
     <div class="a2">
-        <a href="https://maps.google.com/maps?sll=52.5075419,13.4251364&sspn=0.6421529,1.4070236&cid=297554536935865200&output=classic&dg=0"><i>G Maps</i></a>
+        <a href="https://www.google.com/maps/place/Berlin,+Germany/@52.5065133,13.1445545,10z/data=!4m5!3m4!1s0x0:0x42120465b5e3b70!8m2!3d52.5200066!4d13.404954!5m1!1e4"><i>G Maps</i></a>
         <a href="http://gmail.com/"><i>G Mail</i></a>
     </div>
     <div class="a2">
@@ -382,13 +382,14 @@
 
     <div class="a2 center">
         <a href="http://www.w3schools.com/cssref/default.asp"><i>CSS</i></a>
-        <a href="http://www.w3schools.com/html/default.asp"><i>HTML</i></a>
+        <a href="https://www.w3schools.com/tags/default.asp"><i>HTML</i></a>
     </div>
     <div class="a2 center">
         <a href="http://www.w3schools.com/jquery/jquery_ref_events.asp"><i>jQ</i></a>
         <a href="http://www.w3schools.com/js/default.asp"><i>JS</i></a>
     </div>
     <a href="http://caniuse.com/" class="bold"><i>caniuse</i></a>
+    <a href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
 
     <div class="a2">
         <a href="http://apps.pixlr.com/editor/"><i>Pixlr</i></a>
