--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -294,13 +294,21 @@
 
     <a href="http://shrib.com/fi2jjGmZx2bicrF" class="red center"><i>shrib</i></a>
     <a href="https://app.asana.com/" class="center"><i>Asana</i></a>
+    <a href="https://github.com/zlsheepcity" class="center"><i>GitHub zlsheepcity</i></a>
 
     <div class="a0"></div>
-    <a href="https://developers.facebook.com/tools/debug/"><i>FB debugger</i></a>
+
+    
     <a href="https://developers.google.com/speed/pagespeed/insights/"><i>PageSpeed</i></a>
     <a href="https://www.webpagetest.org/"><i>WebPageTest</i></a>
 
+    <div class="a2">
+        <a href="https://developers.facebook.com/tools/debug/"><i>FB bug</i></a>
+        <a href="https://search.google.com/structured-data/testing-tool"><i>G+ bug</i></a>
+    </div>
+
     <div class="a0"></div>
+
     <a href="https://analytics.google.com/analytics/web/"><i>G Analytics</i></a>
 
     <div class="a0"></div>
@@ -310,12 +318,6 @@
     <div class="a0"></div>
 
     <a href="https://www.paypal.com/"><i>paypal</i></a>
-
-    <div class="a0"></div>
-
-    <a href="http://www.fubiz.net/" class="bold"><i>fubiz</i></a>
-    <a href="http://ffffound.com/"><i>FFFFOUND!</i></a>
-    <a href="http://www.boredpanda.com/"><i>bored panda</i></a>
 
 </div>
 <!-- ========================================================================== -->
@@ -338,6 +340,12 @@
     <a href="http://vizualize.tumblr.com/"><i>vizualize.tumblr</i></a>
     <a href="http://langsam.ru/ris/"><i>Infografika</i></a>
     <a href="https://dribbble.com/"><i>Dribbble</i></a>
+
+    <div class="a0"></div>
+
+    <a href="http://www.fubiz.net/" class="bold"><i>fubiz</i></a>
+    <a href="http://ffffound.com/"><i>FFFFOUND!</i></a>
+    <a href="http://www.boredpanda.com/"><i>bored panda</i></a>
 
 </div>
 <!-- ========================================================================== -->
@@ -371,7 +379,6 @@
     <div class="a0"></div>
 
     <a href="http://medialabamsterdam.com/toolkit/"><i>Design methods</i></a>
-    <a href="http://www.calltoidea.com/p-forms.php"><i>el Samples</i></a>
 
 
 </div>
