--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -274,6 +274,7 @@
 
     <a href="https://nplus1.ru/"><i>n+1</i></a>
     <a href="http://elementy.ru/"><i>elementy.ru</i></a>
+    <a href="http://www.membrana.ru/"><i>membrana.ru</i></a>
 
     <div class="a0"></div>
 
@@ -314,6 +315,7 @@
     <div class="a0"></div>
     <a href="https://www.typeform.com/"><i>typeform</i></a>
     <a href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
+    <a href="https://gomockingbird.com/"><i>mockingbird</i></a>
 
     <div class="a0"></div>
 
