--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -404,6 +404,7 @@
         <a href="http://apps.pixlr.com/editor/"><i>Pixlr</i></a>
         <a href="https://www.photopea.com/"><i>Photopea</i></a>
     </div>
+    <a href="https://jakearchibald.github.io/svgomg/"><i>SVG optimizer</i></a>
     
     <div class="a3 center">
     <a href="https://cloudconvert.com/website-to-pdf"><i>url·pdf</i></a>
@@ -414,6 +415,7 @@
 
     <div class="a0"><i>▲▼◄►✓✗&nbsp;«» &nbsp;</i></div>
     <div class="a0"><i>€ · ♥★←→ &nbsp;</i></div>
+    <div class="a0"><i>ʕ⊙ᴥ⊙ʔ ༼°▽°༽</i></div>
 
     <div class="a23">
         <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
